docs: consolidate CLAUDE.md into AGENTS.md as single agent-instruction source